chore: refacto + error code fixes
